--- a/supercluster/Base.lproj/Main.storyboard
+++ b/supercluster/Base.lproj/Main.storyboard
@@ -24,13 +24,18 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cXQ-dY-NQm">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="605"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewLayout key="collectionViewLayout" id="znK-yq-r3A" customClass="RFQuiltLayout"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rPE-8W-vL6">
+                                    <size key="itemSize" width="350" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PostView" id="FBE-iV-EeK">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="350" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -45,21 +50,41 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kod-n5-3D3">
-                                        <rect key="frame" x="200" y="28" width="200" height="24"/>
+                                        <rect key="frame" x="175" y="28" width="250" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="juK-x4-oFc"/>
+                                            <constraint firstAttribute="width" constant="250" id="juK-x4-oFc"/>
                                             <constraint firstAttribute="height" constant="24" id="ye0-dL-rU7"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p8I-ZL-LWR" customClass="IconButton" customModule="supercluster" customModuleProvider="target">
+                                        <rect key="frame" x="562" y="25" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="ZeX-U4-grh"/>
+                                            <constraint firstAttribute="width" constant="30" id="wu1-G7-e5h"/>
+                                        </constraints>
+                                        <state key="normal" title="🚀">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="rotation">
+                                                <real key="value" value="135"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="doneButtonWasPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="wRi-I6-SAv"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1098039225" green="0.14509804549999999" blue="0.19607843459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Ptq-fY-Q9t"/>
+                                    <constraint firstAttribute="trailing" secondItem="p8I-ZL-LWR" secondAttribute="trailing" constant="8" id="RPr-5k-bFS"/>
                                     <constraint firstItem="Kod-n5-3D3" firstAttribute="top" secondItem="APW-Tf-ORX" secondAttribute="top" constant="28" id="bOy-jV-IHb"/>
                                     <constraint firstAttribute="centerX" secondItem="Kod-n5-3D3" secondAttribute="centerX" id="cp0-H3-Utx"/>
+                                    <constraint firstItem="p8I-ZL-LWR" firstAttribute="top" secondItem="APW-Tf-ORX" secondAttribute="top" constant="25" id="rIw-Ha-J37"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -153,7 +178,7 @@
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="rotation">
-                                        <real key="value" value="-44.899999999999999"/>
+                                        <real key="value" value="-45"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
