--- a/supercluster/Post Views/TextPostView.xib
+++ b/supercluster/Post Views/TextPostView.xib
@@ -7,30 +7,30 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="bus-eq-iCt" customClass="TextPostView" customModule="supercluster" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="175" height="145"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aeD-vg-peK">
-                    <rect key="frame" x="0.0" y="0.0" width="175" height="40"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hvz-Ey-Igo">
-                            <rect key="frame" x="41" y="9" width="91" height="21"/>
+                            <rect key="frame" x="55" y="15" width="210" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="iaO-dr-9gR"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="15"/>
+                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="15"/>
                             <color key="textColor" red="0.93725490196078431" green="0.21568627450980393" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gSd-bl-0Rs" customClass="LazyImageView" customModule="supercluster" customModuleProvider="target">
-                            <rect key="frame" x="5" y="5" width="30" height="30"/>
+                            <rect key="frame" x="10" y="10" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="hCO-WP-vcD"/>
                                 <constraint firstAttribute="height" constant="30" id="itv-C9-fML"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="45J-Hb-Xir">
-                            <rect key="frame" x="140" y="5" width="30" height="30"/>
+                            <rect key="frame" x="280" y="10" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="0H0-LN-7kb"/>
                                 <constraint firstAttribute="height" constant="30" id="Pxm-KO-wxr"/>
@@ -40,33 +40,33 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="7ce-7Y-UJY"/>
-                        <constraint firstItem="gSd-bl-0Rs" firstAttribute="leading" secondItem="aeD-vg-peK" secondAttribute="leading" constant="5" id="8oI-on-wYE"/>
-                        <constraint firstItem="gSd-bl-0Rs" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="5" id="9oI-ch-Y3V"/>
-                        <constraint firstItem="hvz-Ey-Igo" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="9" id="HBn-Cd-hpj"/>
-                        <constraint firstItem="45J-Hb-Xir" firstAttribute="leading" secondItem="hvz-Ey-Igo" secondAttribute="trailing" constant="8" id="OMK-wM-Kfg"/>
-                        <constraint firstAttribute="trailing" secondItem="45J-Hb-Xir" secondAttribute="trailing" constant="5" id="efe-sb-a78"/>
-                        <constraint firstItem="hvz-Ey-Igo" firstAttribute="leading" secondItem="gSd-bl-0Rs" secondAttribute="trailing" constant="6" id="j6U-RH-eg7"/>
-                        <constraint firstItem="45J-Hb-Xir" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="5" id="sqy-5S-6U9"/>
+                        <constraint firstItem="gSd-bl-0Rs" firstAttribute="leading" secondItem="aeD-vg-peK" secondAttribute="leading" constant="10" id="8oI-on-wYE"/>
+                        <constraint firstItem="gSd-bl-0Rs" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="10" id="9oI-ch-Y3V"/>
+                        <constraint firstItem="hvz-Ey-Igo" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="15" id="HBn-Cd-hpj"/>
+                        <constraint firstItem="45J-Hb-Xir" firstAttribute="leading" secondItem="hvz-Ey-Igo" secondAttribute="trailing" constant="15" id="OMK-wM-Kfg"/>
+                        <constraint firstAttribute="trailing" secondItem="45J-Hb-Xir" secondAttribute="trailing" constant="10" id="efe-sb-a78"/>
+                        <constraint firstItem="hvz-Ey-Igo" firstAttribute="leading" secondItem="gSd-bl-0Rs" secondAttribute="trailing" constant="15" id="j6U-RH-eg7"/>
+                        <constraint firstItem="45J-Hb-Xir" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="top" constant="10" id="sqy-5S-6U9"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I5k-11-BUa">
-                    <rect key="frame" x="0.0" y="115" width="175" height="30"/>
+                    <rect key="frame" x="0.0" y="115" width="320" height="30"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcI-zg-GlB">
-                            <rect key="frame" x="5" y="4" width="78" height="21"/>
+                            <rect key="frame" x="10" y="7" width="145.5" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="ktR-a1-E1r"/>
                             </constraints>
-                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="8"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="10"/>
                             <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kq4-U9-6Po">
-                            <rect key="frame" x="92" y="4" width="78" height="21"/>
+                            <rect key="frame" x="164.5" y="7" width="145.5" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="Xqr-MM-22c"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="10"/>
                             <color key="textColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -74,28 +74,30 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="32T-Fb-wgW"/>
-                        <constraint firstItem="dcI-zg-GlB" firstAttribute="leading" secondItem="I5k-11-BUa" secondAttribute="leading" constant="5" id="3b4-Ce-J2w"/>
+                        <constraint firstItem="dcI-zg-GlB" firstAttribute="leading" secondItem="I5k-11-BUa" secondAttribute="leading" constant="10" id="3b4-Ce-J2w"/>
                         <constraint firstItem="Kq4-U9-6Po" firstAttribute="leading" secondItem="dcI-zg-GlB" secondAttribute="trailing" constant="9" id="AW4-WB-boP"/>
-                        <constraint firstAttribute="trailing" secondItem="Kq4-U9-6Po" secondAttribute="trailing" constant="5" id="PbP-YX-QKO"/>
-                        <constraint firstAttribute="bottom" secondItem="Kq4-U9-6Po" secondAttribute="bottom" constant="5" id="T7H-0J-T6p"/>
+                        <constraint firstAttribute="trailing" secondItem="Kq4-U9-6Po" secondAttribute="trailing" constant="10" id="PbP-YX-QKO"/>
+                        <constraint firstAttribute="bottom" secondItem="Kq4-U9-6Po" secondAttribute="bottom" constant="2" id="T7H-0J-T6p"/>
                         <constraint firstItem="dcI-zg-GlB" firstAttribute="width" secondItem="Kq4-U9-6Po" secondAttribute="width" id="TPf-p7-wgd"/>
-                        <constraint firstAttribute="bottom" secondItem="dcI-zg-GlB" secondAttribute="bottom" constant="5" id="XTK-vG-qjf"/>
+                        <constraint firstAttribute="bottom" secondItem="dcI-zg-GlB" secondAttribute="bottom" constant="2" id="XTK-vG-qjf"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRG-e0-hWM">
-                    <rect key="frame" x="0.0" y="40" width="175" height="75"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRG-e0-hWM">
+                    <rect key="frame" x="5" y="50" width="310" height="65"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                 </textView>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="I5k-11-BUa" secondAttribute="trailing" id="Gn4-Zr-PUO"/>
-                <constraint firstItem="HRG-e0-hWM" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="bottom" id="R4i-zJ-NhJ"/>
-                <constraint firstAttribute="trailing" secondItem="HRG-e0-hWM" secondAttribute="trailing" id="Zfp-4j-7qZ"/>
+                <constraint firstItem="HRG-e0-hWM" firstAttribute="top" secondItem="aeD-vg-peK" secondAttribute="bottom" constant="10" id="R4i-zJ-NhJ"/>
+                <constraint firstAttribute="trailing" secondItem="HRG-e0-hWM" secondAttribute="trailing" constant="5" id="Zfp-4j-7qZ"/>
                 <constraint firstItem="aeD-vg-peK" firstAttribute="top" secondItem="bus-eq-iCt" secondAttribute="top" id="bJc-ym-BBg"/>
-                <constraint firstItem="HRG-e0-hWM" firstAttribute="leading" secondItem="bus-eq-iCt" secondAttribute="leading" id="fPB-OB-Sr3"/>
+                <constraint firstItem="HRG-e0-hWM" firstAttribute="leading" secondItem="bus-eq-iCt" secondAttribute="leading" constant="5" id="fPB-OB-Sr3"/>
                 <constraint firstAttribute="trailing" secondItem="aeD-vg-peK" secondAttribute="trailing" id="gKW-w4-82t"/>
                 <constraint firstItem="I5k-11-BUa" firstAttribute="leading" secondItem="bus-eq-iCt" secondAttribute="leading" id="he0-SX-Gb1"/>
                 <constraint firstItem="I5k-11-BUa" firstAttribute="top" secondItem="HRG-e0-hWM" secondAttribute="bottom" id="jGT-sf-Jgd"/>
@@ -122,7 +124,7 @@
                 <outlet property="sourceIconView" destination="45J-Hb-Xir" id="7Ot-H1-YYW"/>
                 <outlet property="textView" destination="HRG-e0-hWM" id="dIM-PT-T21"/>
             </connections>
-            <point key="canvasLocation" x="198.5" y="203.5"/>
+            <point key="canvasLocation" x="-61" y="-33.5"/>
         </view>
     </objects>
 </document>
